# another-ci-sandbox

./: .gitignore  CHANGELOG.md  Release.txt  index.html  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: bumpver.yml  jekyll-gh-pages.yml  main.yml  release.yml
0.11.2/: index.html
0.11.3/: index.html
0.12.0/: index.html
0.12.1/: index.html
0.12.2/: index.html
0.12.4/: index.html
0.12.5/: 404.html  index.html
0.2.0/: index.html
0.3.0/: index.html
0.4.0/: index.html
0.5.0/: index.html
0.5.1/: index.html
0.5.2/: index.html
0.5.3/: index.html
0.5.4/: index.html
0.5.5/: index.html
0.5.6/: index.html
0.5.7/: index.html
0.6.0/: index.html
0.6.1/: index.html
0.6.2/: index.html
0.6.3/: index.html
0.6.4/: index.html
0.7.0/: index.html
0.7.1/: index.html
0.7.2/: index.html
0.7.3/: index.html
0.7.4/: index.html
0.8.0/: index.html
0.8.1/: index.html
0.8.2/: index.html
0.8.3/: index.html
0.9.0/: index.html
0.9.1/: index.html
0.9.2/: index.html
0.9.3/: index.html
0.9.4/: index.html
0.9.5/: index.html
0.9.6/: index.html
0.9.7/: index.html
docs/: index.md
src/: stuff.py
