[project]
name = "foo"
version = "0.3.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
